overlapping & view more button issue footer

--- a/src/components/back-to-top/style.scss
+++ b/src/components/back-to-top/style.scss
@@ -16,7 +16,7 @@
 	}
 
 	@media screen and (max-width: 550px) {
-		bottom: 80px;
+		bottom: 140px;
 		right: 24px;
 	}
 
